compiler1/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | /* empty */

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier error SEMI
    6       | Specifier SEMI
    7       | Specifier FunDec CompSt

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT OptTag LC error RC
   14                | STRUCT Tag

   15 OptTag: ID
   16       | /* empty */

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB

   20 FunDec: ID LP VarList RP
   21       | ID LP error RP
   22       | ID LP RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | LC DefList error RC

   28 StmtList: Stmt StmtList
   29         | /* empty */

   30 Stmt: Exp SEMI
   31     | error SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | RETURN error SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP error RP Stmt
   37     | IF LP Exp RP Stmt ELSE Stmt
   38     | WHILE LP Exp RP Stmt
   39     | WHILE LP error RP Stmt

   40 DefList: Def DefList
   41        | /* empty */

   42 Def: Specifier DecList SEMI
   43    | Specifier error SEMI

   44 DecList: Dec
   45        | Dec COMMA DecList

   46 Dec: VarDec
   47    | VarDec ASSIGNOP Exp

   48 Exp: Exp ASSIGNOP Exp
   49    | Exp AND Exp
   50    | Exp OR Exp
   51    | Exp RELOP Exp
   52    | Exp PLUS Exp
   53    | Exp MINUS Exp
   54    | Exp STAR Exp
   55    | Exp DIV Exp
   56    | LP Exp RP
   57    | MINUS Exp
   58    | NOT Exp
   59    | ID LP Args RP
   60    | ID LP error RP
   61    | ID LP RP
   62    | Exp LB Exp RB
   63    | Exp LB error RB
   64    | Exp DOT ID
   65    | ID
   66    | INT
   67    | FLOAT

   68 Args: Exp COMMA Args
   69     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 5 13 21 27 31 34 36 39 43 60 63
INT (258) 19 66
FLOAT (259) 67
ID (260) 15 17 18 20 21 22 59 60 61 64 65
SEMI (261) 4 5 6 30 31 33 34 42 43
COMMA (262) 9 23 45 68
ASSIGNOP (263) 47 48
RELOP (264) 51
PLUS (265) 52
MINUS (266) 53 57
STAR (267) 54
DIV (268) 55
AND (269) 49
OR (270) 50
DOT (271) 64
NOT (272) 58
TYPE (273) 10
LP (274) 20 21 22 35 36 37 38 39 56 59 60 61
RP (275) 20 21 22 35 36 37 38 39 56 59 60 61
LB (276) 19 62 63
RB (277) 19 62 63
LC (278) 12 13 26 27
RC (279) 12 13 26 27
STRUCT (280) 12 13 14
RETURN (281) 33 34
IF (282) 35 36 37
ELSE (283) 37
WHILE (284) 38 39
LOWER_THEN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7, on right: 2
ExtDecList (35)
    on left: 8 9, on right: 4 9
Specifier (36)
    on left: 10 11, on right: 4 5 6 7 25 42 43
StructSpecifier (37)
    on left: 12 13 14, on right: 11
OptTag (38)
    on left: 15 16, on right: 12 13
Tag (39)
    on left: 17, on right: 14
VarDec (40)
    on left: 18 19, on right: 8 9 19 25 46 47
FunDec (41)
    on left: 20 21 22, on right: 7
VarList (42)
    on left: 23 24, on right: 20 23
ParamDec (43)
    on left: 25, on right: 23 24
CompSt (44)
    on left: 26 27, on right: 7 32
StmtList (45)
    on left: 28 29, on right: 26 28
Stmt (46)
    on left: 30 31 32 33 34 35 36 37 38 39, on right: 28 35 36 37 38
    39
DefList (47)
    on left: 40 41, on right: 12 26 27 40
Def (48)
    on left: 42 43, on right: 40
DecList (49)
    on left: 44 45, on right: 42 45
Dec (50)
    on left: 46 47, on right: 44 45
Exp (51)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66 67, on right: 30 33 35 37 38 47 48 49 50 51 52 53 54 55 56 57
    58 62 63 64 68 69
Args (52)
    on left: 68 69, on right: 59 68


state 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


state 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


state 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . OptTag LC error RC
   14                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


state 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


state 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


state 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


state 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . error SEMI
    6       | Specifier . SEMI
    7       | Specifier . FunDec CompSt

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


state 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


state 8

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


state 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC
   13                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 19


state 10

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


state 11

    0 $accept: Program $end .

    $default  accept


state 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


state 13

    5 ExtDef: Specifier error . SEMI

    SEMI  shift, and go to state 20


state 14

   18 VarDec: ID .
   20 FunDec: ID . LP VarList RP
   21       | ID . LP error RP
   22       | ID . LP RP

    LP  shift, and go to state 21

    $default  reduce using rule 18 (VarDec)


state 15

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


state 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 22


state 17

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 8 (ExtDecList)


state 18

    7 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 25

    CompSt  go to state 26


state 19

   12 StructSpecifier: STRUCT OptTag LC . DefList RC
   13                | STRUCT OptTag LC . error RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 41 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


state 20

    5 ExtDef: Specifier error SEMI .

    $default  reduce using rule 5 (ExtDef)


state 21

   20 FunDec: ID LP . VarList RP
   21       | ID LP . error RP
   22       | ID LP . RP

    error   shift, and go to state 31
    TYPE    shift, and go to state 1
    RP      shift, and go to state 32
    STRUCT  shift, and go to state 2

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 34
    ParamDec         go to state 35


state 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


state 23

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 36

    ExtDecList  go to state 37
    VarDec      go to state 17


state 24

   19 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 38


state 25

   26 CompSt: LC . DefList StmtList RC
   27       | LC . DefList error RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 39
    Def              go to state 30


state 26

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


state 27

   13 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 40


state 28

   42 Def: Specifier . DecList SEMI
   43    | Specifier . error SEMI

    error  shift, and go to state 41
    ID     shift, and go to state 36

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


state 29

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 45


state 30

   40 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 41 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 46
    Def              go to state 30


state 31

   21 FunDec: ID LP error . RP

    RP  shift, and go to state 47


state 32

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


state 33

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 36

    VarDec  go to state 48


state 34

   20 FunDec: ID LP VarList . RP

    RP  shift, and go to state 49


state 35

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 50

    $default  reduce using rule 24 (VarList)


state 36

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


state 37

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


state 38

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 51


state 39

   26 CompSt: LC DefList . StmtList RC
   27       | LC DefList . error RC

    error   shift, and go to state 52
    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    ID      shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 25
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 63
    Stmt      go to state 64
    Exp       go to state 65


state 40

   13 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 13 (StructSpecifier)


state 41

   43 Def: Specifier error . SEMI

    SEMI  shift, and go to state 66


state 42

   19 VarDec: VarDec . LB INT RB
   46 Dec: VarDec .
   47    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 67
    LB        shift, and go to state 24

    $default  reduce using rule 46 (Dec)


state 43

   42 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 68


state 44

   44 DecList: Dec .
   45        | Dec . COMMA DecList

    COMMA  shift, and go to state 69

    $default  reduce using rule 44 (DecList)


state 45

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


state 46

   40 DefList: Def DefList .

    $default  reduce using rule 40 (DefList)


state 47

   21 FunDec: ID LP error RP .

    $default  reduce using rule 21 (FunDec)


state 48

   19 VarDec: VarDec . LB INT RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 25 (ParamDec)


state 49

   20 FunDec: ID LP VarList RP .

    $default  reduce using rule 20 (FunDec)


state 50

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 70
    ParamDec         go to state 35


state 51

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


state 52

   27 CompSt: LC DefList error . RC
   31 Stmt: error . SEMI

    SEMI  shift, and go to state 71
    RC    shift, and go to state 72


state 53

   66 Exp: INT .

    $default  reduce using rule 66 (Exp)


state 54

   67 Exp: FLOAT .

    $default  reduce using rule 67 (Exp)


state 55

   59 Exp: ID . LP Args RP
   60    | ID . LP error RP
   61    | ID . LP RP
   65    | ID .

    LP  shift, and go to state 73

    $default  reduce using rule 65 (Exp)


state 56

   57 Exp: MINUS . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 74


state 57

   58 Exp: NOT . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 75


state 58

   56 Exp: LP . Exp RP

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 76


state 59

   33 Stmt: RETURN . Exp SEMI
   34     | RETURN . error SEMI

    error  shift, and go to state 77
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 78


state 60

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP error RP Stmt
   37     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 79


state 61

   38 Stmt: WHILE . LP Exp RP Stmt
   39     | WHILE . LP error RP Stmt

    LP  shift, and go to state 80


state 62

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


state 63

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 81


state 64

   28 StmtList: Stmt . StmtList

    error   shift, and go to state 82
    INT     shift, and go to state 53
    FLOAT   shift, and go to state 54
    ID      shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 25
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61

    RC  reduce using rule 29 (StmtList)

    CompSt    go to state 62
    StmtList  go to state 83
    Stmt      go to state 64
    Exp       go to state 65


state 65

   30 Stmt: Exp . SEMI
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    SEMI      shift, and go to state 84
    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94


state 66

   43 Def: Specifier error SEMI .

    $default  reduce using rule 43 (Def)


state 67

   47 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 95


state 68

   42 Def: Specifier DecList SEMI .

    $default  reduce using rule 42 (Def)


state 69

   45 DecList: Dec COMMA . DecList

    ID  shift, and go to state 36

    VarDec   go to state 42
    DecList  go to state 96
    Dec      go to state 44


state 70

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


state 71

   31 Stmt: error SEMI .

    $default  reduce using rule 31 (Stmt)


state 72

   27 CompSt: LC DefList error RC .

    $default  reduce using rule 27 (CompSt)


state 73

   59 Exp: ID LP . Args RP
   60    | ID LP . error RP
   61    | ID LP . RP

    error  shift, and go to state 97
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    RP     shift, and go to state 98

    Exp   go to state 99
    Args  go to state 100


state 74

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   57    | MINUS Exp .
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    STAR  shift, and go to state 89
    DIV   shift, and go to state 90
    DOT   shift, and go to state 93
    LB    shift, and go to state 94

    $default  reduce using rule 57 (Exp)


state 75

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   58    | NOT Exp .
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    DOT  shift, and go to state 93
    LB   shift, and go to state 94

    $default  reduce using rule 58 (Exp)


state 76

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   56    | LP Exp . RP
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    RP        shift, and go to state 101
    LB        shift, and go to state 94


state 77

   34 Stmt: RETURN error . SEMI

    SEMI  shift, and go to state 102


state 78

   33 Stmt: RETURN Exp . SEMI
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    SEMI      shift, and go to state 103
    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94


state 79

   35 Stmt: IF LP . Exp RP Stmt
   36     | IF LP . error RP Stmt
   37     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 104
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 105


state 80

   38 Stmt: WHILE LP . Exp RP Stmt
   39     | WHILE LP . error RP Stmt

    error  shift, and go to state 106
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 107


state 81

   26 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 26 (CompSt)


state 82

   31 Stmt: error . SEMI

    SEMI  shift, and go to state 71


state 83

   28 StmtList: Stmt StmtList .

    $default  reduce using rule 28 (StmtList)


state 84

   30 Stmt: Exp SEMI .

    $default  reduce using rule 30 (Stmt)


state 85

   48 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 108


state 86

   51 Exp: Exp RELOP . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 109


state 87

   52 Exp: Exp PLUS . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 110


state 88

   53 Exp: Exp MINUS . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 111


state 89

   54 Exp: Exp STAR . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 112


state 90

   55 Exp: Exp DIV . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 113


state 91

   49 Exp: Exp AND . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 114


state 92

   50 Exp: Exp OR . Exp

    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 115


state 93

   64 Exp: Exp DOT . ID

    ID  shift, and go to state 116


state 94

   62 Exp: Exp LB . Exp RB
   63    | Exp LB . error RB

    error  shift, and go to state 117
    INT    shift, and go to state 53
    FLOAT  shift, and go to state 54
    ID     shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 118


state 95

   47 Dec: VarDec ASSIGNOP Exp .
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94

    $default  reduce using rule 47 (Dec)


state 96

   45 DecList: Dec COMMA DecList .

    $default  reduce using rule 45 (DecList)


state 97

   60 Exp: ID LP error . RP

    RP  shift, and go to state 119


state 98

   61 Exp: ID LP RP .

    $default  reduce using rule 61 (Exp)


state 99

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID
   68 Args: Exp . COMMA Args
   69     | Exp .

    COMMA     shift, and go to state 120
    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94

    $default  reduce using rule 69 (Args)


state 100

   59 Exp: ID LP Args . RP

    RP  shift, and go to state 121


state 101

   56 Exp: LP Exp RP .

    $default  reduce using rule 56 (Exp)


state 102

   34 Stmt: RETURN error SEMI .

    $default  reduce using rule 34 (Stmt)


state 103

   33 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 33 (Stmt)


state 104

   36 Stmt: IF LP error . RP Stmt

    RP  shift, and go to state 122


state 105

   35 Stmt: IF LP Exp . RP Stmt
   37     | IF LP Exp . RP Stmt ELSE Stmt
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    RP        shift, and go to state 123
    LB        shift, and go to state 94


state 106

   39 Stmt: WHILE LP error . RP Stmt

    RP  shift, and go to state 124


state 107

   38 Stmt: WHILE LP Exp . RP Stmt
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    RP        shift, and go to state 125
    LB        shift, and go to state 94


state 108

   48 Exp: Exp . ASSIGNOP Exp
   48    | Exp ASSIGNOP Exp .
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94

    $default  reduce using rule 48 (Exp)


state 109

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   51    | Exp RELOP Exp .
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   62    | Exp . LB Exp RB
   63    | Exp . LB error RB
   64    | Exp . DOT ID

    PLUS   shift, and go to state 87
    MINUS  shift, and go to state 88
    STAR   shift, and go to state 89
    DIV    shift, and go to state 90
    DOT    shift, and go to state 93
    LB     shift, and go to state 94

    $default  reduce using rule 51 (Exp)


state 110
